# bigo

./: .gitignore  bigo.cabal  cabal.project  hie.yaml  readme.md
app/: T10942.hs  app.hs  coretest.hs
src/: BigO.hs
